Fix jumping logo and ending of styling header.

--- a/src/style/partials/navigation.scss
+++ b/src/style/partials/navigation.scss
@@ -8,34 +8,36 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    .navbar {
+      justify-content: flex-start;
+      flex-wrap: nowrap;
+    }
+
   }
 
   .navbar-brand {
-    //@media (max-width: 992px) {
-    //  order: 3;
-    //}
+    margin: 0 24px;
     img {
       width: 95px;
       height: 100%;
     }
   }
 
-
-
-  .navbar-toggler {
-
-  }
-
   .select-language {
-
-    //@media (max-width: 992px) {
-    //  order: 2;
-    //}
     height: 76px;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: flex-end;
+    .dropdown-item {
+      &:hover {
+        background-color: darken(map-get($color-scheme-one, dirty-blue), 7%);
+        color: darken(map_get($color-scheme-one, snow-white), 20%);
+      }
+      &:focus {
+        background-color: darken(map-get($color-scheme-one, dirty-blue), 90%);
+      }
+    }
     p {
       margin: 0;
       color: map_get($color-scheme-one, snow-white);
@@ -52,23 +54,15 @@
     }
     .dropdown-menu.show {
       background-color: map-get($color-scheme-one, dirty-blue);
-      //width: 100%;
       padding: 0;
       p {
         padding: 8px 24px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        border-bottom: 1px solid map_get($color-scheme-one, pale-diry-blue);
       }
     }
 
   }
-
-  .collapse {
-    //@media (max-width: 992px) {
-    //  order: 1;
-    //}
-  }
-
-
 }
