--- a/src/style/partials/variables.scss
+++ b/src/style/partials/variables.scss
@@ -6,7 +6,8 @@ $color-scheme-one: (
         peach: #fce3af,
         dirty-blue: #4e6686,
         close-black: #070813,
-        snow-white: #ffffff
+        snow-white: #ffffff,
+        pale-diry-blue: #5f7692
 );
 
 $color-scheme-two: (
